<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/device_extras_title">

    <PreferenceCategory android:title="@string/haptics_category">
        <SeekBarPreference
            android:key="vibrator_intensity"
            android:title="@string/vibrator_intensity_title"
            android:summary="@string/vibrator_intensity_summary"
            android:defaultValue="2100" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/network_settings_title">
        <Preference
            android:key="network_band_settings"
            android:title="@string/network_settings_title"
            android:summary="@string/network_settings_summary">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="org.lineageos.settings.device"
                android:targetClass="org.lineageos.settings.device.NetworkSettingsActivity" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>
